--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "@opentelemetry/resources": "^1.25.0",
     "@opentelemetry/sdk-node": "^0.52.0",
     "@opentelemetry/semantic-conventions": "^1.25.0",
+    "@types/opossum": "^8.1.9",
     "@willsoto/nestjs-prometheus": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "jsonwebtoken": "^9.0.2",
     "nestjs-pino": "^3.5.0",
+    "opossum": "^9.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.17.1",
